etc/openshift/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        - 
          image: openshiftacademiaonline/spring-petclinic-dev:2.3
          name: java
          resources:
            limits:
              cpu: 300m
              memory: 900Mi
            requests:
              cpu: 300m
              memory: 900Mi
