etc/openshift/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-svc
spec:
  ports: 
  -
    port: 80
    targetPort: 8080
  selector: 
    app: spring-petclinic
